--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "material-design-icons": "^3.0.1",
     "package.json": "^2.0.1",
     "rxjs": "~6.4.0",
+    "surge": "^0.21.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
