--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "material-design-icons": "^3.0.1",
     "package.json": "^2.0.1",
     "rxjs": "~6.4.0",
-    "surge": "^0.21.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -44,6 +43,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "git-scripts": "^0.4.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -52,8 +52,11 @@
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
+    "surge": "^0.21.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "git": { "scripts": { "pre-push": "surge --project ./ --domain gitloputoo-stage.surge.sh/" } }
   }
+
 }
