--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "pre-push": "ng build --prod && surge -p dist/loputoo --domain loputoo-stage.surge.sh"
+    "e2e": "ng e2e"
   },
+  "pre-push": [
+    "ng build --prod",
+    "surge -p dist/loputoo --domain loputoo-stage.surge.sh"
+  ],
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
@@ -52,11 +55,11 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "pre-push": "^0.1.1",
     "protractor": "~5.4.0",
     "surge": "^0.21.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "^3.5.3"
   }
-
 }
