--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cc": "jest --coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "pre-push": "ng build --prod && surge -p dist/loputoo --domain loputoo-stage.surge.sh"
   },
-  
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
@@ -26,10 +27,13 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "~5.2.2",
+    "@types/jest": "^25.2.1",
     "angular-cli-ghpages": "^0.6.2",
     "bootstrap": "^4.4.1",
     "cypress": "^4.3.0",
     "hammerjs": "^2.0.8",
+    "jest": "^26.0.1",
+    "jest-preset-angular": "^8.2.0",
     "material-design-icons": "^3.0.1",
     "package.json": "^2.0.1",
     "rxjs": "~6.4.0",
@@ -41,23 +45,25 @@
     "@angular/cli": "~8.3.24",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "git-scripts": "^0.4.3",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+
     "pre-push": "^0.1.1",
     "protractor": "~5.4.0",
     "surge": "^0.21.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "^3.5.3"
-  }
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": ["<rootDir>/src/setupJest.ts"],
+    "globals": {
+      "ts-jest": {
+          "tsConfig": "<rootDir>/tsconfig.spec.json"
+      }
+   }
+   }
 }
